--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "bot template",
   "main": "src/bot.js",
   "scripts": {
-    "main": "node src/bot.js"
+    "main": "node src/bot.js",
+    "prettier:check": "prettier ./src --check",
+    "eslint:check": "eslint ./src",
+    "prettier:fix": "prettier ./src --write",
+    "eslint:fix": "eslint ./src --fix",
+    "lint": "pnpm run prettier:check && pnpm run eslint:check",
+    "lint:fix": "pnpm run prettier:fix && pnpm run eslint:fix"
   },
   "keywords": [],
   "author": "wolfkid200444",
@@ -12,5 +18,9 @@
   "dependencies": {
     "@discordjs/rest": "^1.7.1",
     "discord.js": "^14.11.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.40.0",
+    "prettier": "^2.8.8"
   }
 }
