--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "bot template",
   "main": "src/bot.js",
+  "type": "module",
   "engines": {
     "node": ">=18.0.0",
     "pnpm": ">=8.0.0"
@@ -19,7 +20,8 @@
   "license": "MIT",
   "dependencies": {
     "@discordjs/rest": "^1.7.1",
-    "discord.js": "^14.11.0"
+    "discord.js": "^14.11.0",
+    "dotenv": "^16.0.3"
   },
   "devDependencies": {
     "eslint": "^8.40.0"
