--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,11 @@
     "compilerOptions": {
         "target": "ES2017",
         "module": "ES2022",
-        "strict": false,
+        "strict": true,
+        "noImplicitAny": true,
+        "strictNullChecks": true,
         "esModuleInterop": true,
+        "resolveJsonModule": true,
         "moduleResolution": "node"
     }
 }
