--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,6 @@
         "strictNullChecks": true,
         "esModuleInterop": true,
         "resolveJsonModule": true,
-        "moduleResolution": "node"
-    }
+        "moduleResolution": "node",
+    },
 }
