--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "main": "tsx ./src/bot.ts",
     "dev": "tsx watch ./src/bot.ts",
+    "check": "tsc --noEmit",
     "eslint:check": "eslint ./src",
     "eslint:fix": "eslint ./src --fix",
     "lint": "pnpm run eslint:check",
@@ -28,6 +29,7 @@
     "@types/node": "^20.2.1",
     "esbuild": "^0.17.19",
     "eslint": "^8.40.0",
-    "tsx": "^3.12.7"
+    "tsx": "^3.12.7",
+    "typescript": "^5.0.4"
   }
 }
