--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,9 @@
         "strictNullChecks": true,
         "esModuleInterop": true,
         "resolveJsonModule": true,
+        "noEmit": true,
         "moduleResolution": "node",
+        "forceConsistentCasingInFileNames": true,
+        "typeRoots": ["./src/types", "./node_modules/@types"]
     },
 }
