refactor: fix parameter order in Interaction constructor
This commit fixes a parameter order issue in the constructor of the Interaction class in utils.ts. The name parameter is moved before the client parameter to fix a "A required parameter cannot follow an optional parameter" error. This commit also includes minor code formatting changes.

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "pnpm": ">=8.0.0"
   },
   "scripts": {
-    "main": "tsx ./src/bot.ts",
-    "dev": "tsx watch ./src/bot.ts",
+    "main": "tsc --project tsconfig.json",
+    "dev": "tsx watch src/bot.ts",
     "check": "tsc --noEmit",
     "eslint:check": "eslint ./src",
     "eslint:fix": "eslint ./src --fix",
