--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,18 @@
         "module": "ES2022",
         "strict": true,
         "noImplicitAny": true,
+        "sourceMap": true,
         "strictNullChecks": true,
         "esModuleInterop": true,
         "resolveJsonModule": true,
+        "skipLibCheck": true,
         "noEmit": true,
         "moduleResolution": "node",
         "forceConsistentCasingInFileNames": true,
-        "typeRoots": ["./src/types", "./node_modules/@types"]
+        "allowImportingTsExtensions": true,
+        "typeRoots": ["types/types.d.ts", "node_modules/@types"],
+        "outDir": "./dist",
+        "rootDir": "./src"
     },
+    "exclude": ["node_modules", "dist"]
 }
